// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders default correctly 1`] = `
<Component>
  <Button>
    <StyledInteractable
      autoid="Default_button"
      forwardedAs="button"
      typography="button"
    >
      <Interactable
        as="button"
        autoid="Default_button"
        className="StyledInteractable-sc-1aesr5b-0 hrAmOg"
        typography="button"
      >
        <StyledInteractable
          as="button"
          autoid="Default_button"
          className="StyledInteractable-sc-1aesr5b-0 hrAmOg"
          onClick={[Function]}
          typography="button"
        >
          <button
            className="StyledInteractable-vam1r0-0 StyledInteractable-sc-1aesr5b-0 hrAmOg"
            onClick={[Function]}
          >
            <Text>
              <StyledText>
                <span
                  className="StyledText-sc-1iyj5jb-0 kgronq"
                >
                  Default
                </span>
              </StyledText>
            </Text>
          </button>
        </StyledInteractable>
      </Interactable>
    </StyledInteractable>
  </Button>
</Component>
`;

exports[`<Button /> renders primary correctly 1`] = `
<Component>
  <Button
    variant="primary"
  >
    <StyledInteractable
      autoid="Primary_button"
      forwardedAs="button"
      typography="button"
      variant="primary"
    >
      <Interactable
        as="button"
        autoid="Primary_button"
        className="StyledInteractable-sc-1aesr5b-0 iuWzjO"
        typography="button"
        variant="primary"
      >
        <StyledInteractable
          as="button"
          autoid="Primary_button"
          className="StyledInteractable-sc-1aesr5b-0 iuWzjO"
          onClick={[Function]}
          typography="button"
          variant="primary"
        >
          <button
            className="StyledInteractable-vam1r0-0 StyledInteractable-sc-1aesr5b-0 iuWzjO"
            onClick={[Function]}
          >
            <Text>
              <StyledText>
                <span
                  className="StyledText-sc-1iyj5jb-0 kgronq"
                >
                  Primary
                </span>
              </StyledText>
            </Text>
          </button>
        </StyledInteractable>
      </Interactable>
    </StyledInteractable>
  </Button>
</Component>
`;

exports[`<Button /> renders secondary correctly 1`] = `
<Component>
  <Button
    variant="secondary"
  >
    <StyledInteractable
      autoid="Secondary_button"
      forwardedAs="button"
      typography="button"
      variant="secondary"
    >
      <Interactable
        as="button"
        autoid="Secondary_button"
        className="StyledInteractable-sc-1aesr5b-0 gvxuRm"
        typography="button"
        variant="secondary"
      >
        <StyledInteractable
          as="button"
          autoid="Secondary_button"
          className="StyledInteractable-sc-1aesr5b-0 gvxuRm"
          onClick={[Function]}
          typography="button"
          variant="secondary"
        >
          <button
            className="StyledInteractable-vam1r0-0 StyledInteractable-sc-1aesr5b-0 gvxuRm"
            onClick={[Function]}
          >
            <Text>
              <StyledText>
                <span
                  className="StyledText-sc-1iyj5jb-0 kgronq"
                >
                  Secondary
                </span>
              </StyledText>
            </Text>
          </button>
        </StyledInteractable>
      </Interactable>
    </StyledInteractable>
  </Button>
</Component>
`;
